--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "landingpage-react-template",
+  "name": "exam-page",
+  "homepage": "https://sestratalanty.github.io/exam-page",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -12,6 +13,8 @@
     "smooth-scroll": "^16.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
